Attempt to fix viewport issues on iPhone

--- a/numbers/style.css
+++ b/numbers/style.css
@@ -34,17 +34,29 @@
 
 :root {
 	--font-emoji: Apple Color Emoji, Segoe UI Emoji, Noto Color Emoji, emoji;
-	--root-padding: 5vmin;
-	--extrude-height: 3vmin;
-	--gap-h: 5vmin;
-	--button-padding: 3vmin;
+
+	--vw: var(--innerwidth, 1vw);
+	--vh: var(--innerheight, 1vh);
+
+	--vmin: var(--vh);
+
+	--root-padding: calc(5 * var(--vmin));
+	--extrude-height: calc(3 * var(--vmin));
+	--gap-h: calc(5 * var(--vmin));
+	--button-padding: calc(3 * var(--vmin));
 
 	--gap-v: calc(var(--gap-h) + var(--extrude-height));
-	--main-height: calc(100vh - 2 * var(--root-padding));
+	--main-height: calc(100 * var(--vh) - 2 * var(--root-padding));
+}
+
+@media (orientation: portrait) {
+	:root {
+		--vmin: var(--vw);
+	}
 }
 
 body, html {
-	height: 100vh;
+	height: calc(100 * var(--vh));
 }
 
 body {
@@ -93,7 +105,7 @@ button {
 dialog#number:not(.expanded),
 button.number {
 	padding: var(--button-padding);
-	border-radius: 4vh;
+	border-radius: calc(4 * var(--vh));
 	border: 4px solid white;
 }
 
@@ -136,8 +148,8 @@ dialog#number {
 	right: 0;
 	bottom: 0;
 	left: 0;
-	width: 100vw;
-	height: 100vh;
+	width: calc(100 * var(--vw));
+	height: calc(100 * var(--vh));
 	max-width: none;
 	max-height: none;
 	display: grid;
@@ -177,7 +189,7 @@ dialog#number:not(.expanded) {
 	}
 
 	dialog#number.expanded .number {
-		font-size: 80vmin;
+		font-size: calc(80 * var(--vmin));
 		grid-column: 1;
 	}
 
@@ -206,7 +218,7 @@ dialog#number:not(.expanded) {
 
 .words {
 	grid-column: 2;
-	font-size: 10vmin;
+	font-size: calc(10 * var(--vmin));
 	font-weight: bold;
 }
 
@@ -240,7 +252,7 @@ dialog#number:not(.expanded) {
 	flex-wrap: wrap;
 	align-items: center;
 	max-width: 3em;
-	font-size: calc(25vmin * var(--factor, 1));
+	font-size: calc(25 * var(--vmin) * var(--factor, 1));
 	line-height: 1.2;
 	text-shadow: 0 -.01em .05em rgb(0 0 0 / .1);
 }
